--- a/gr-recycle/src/app/home/home.component.css
+++ b/gr-recycle/src/app/home/home.component.css
@@ -9,7 +9,8 @@
 
 .content_container {
   z-index: 2;
-  position: absolute;
+  position: relative;
+  height: 105vh;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -19,14 +20,9 @@
   width: 100%;
   top: 0; 
   left: 0;
-  height: 100%;
-  background-repeat: no-repeat;
-  /* background-attachment: fixed; */
-  background-position: center;
-  background-size: cover;
+  height: 50%;
   filter: blur(8px);
   -webkit-filter: blur(8px);
-
 }
 
 .top {
@@ -63,10 +59,11 @@ h2 {
     text-align: center;
     text-decoration: none;
     font-size: 16px;
-    border-radius: 5px;
     width: 55%;
     margin: 5px;
 }
+
+
 .reportmissing:hover {
   background-color: #f44336; /* Red */
 }
@@ -83,7 +80,10 @@ a {
     }
     .bg_img {
       background-image: none;
-      
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      background-position: center;
+      background-size: cover;
     }
     
     /* .content_container {
